tests/fixtures/valid/docs_sys_status.nl
fn main -> i64
    sys_status("rustc", ["--version"])
