tests/fixtures/invalid/array_literal_type_mismatch.nl
fn main -> array<i64>
    [1, false]
